--- a/apps/react-app/src/index.html
+++ b/apps/react-app/src/index.html
@@ -6,6 +6,16 @@
     <base href="/" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- material-ui -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+    <!-- /material-ui -->
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
